--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	  <module>models</module>
 	  <module>payments</module>
 	  <module>fraud-detection</module>
+	  <module>tx-event-publisher</module>
 	</modules>
 
 	<parent>
