--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	  <module>payments</module>
 	  <module>fraud-detection</module>
 	  <module>tx-event-publisher</module>
+	  <module>accounts</module>
 	</modules>
 
 	<parent>
