Add eureka server

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	  <module>dbmigrations</module>
 	  <module>cli-tool</module>
 	  <module>apigw</module>
+	  <module>eureka-server</module>
 	</modules>
 
 	<parent>
